--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
        width: 100%
    }
 
+   p {
+    line-height: 1.357em;
+   }
+
    .flex-column,
    .flex-row {
        -webkit-box-direction: normal!important
@@ -203,6 +207,13 @@
        min-height: 1px;
        padding-right: 15px;
        padding-left: 15px
+   }
+   h2 {
+     font-size: 2.857em;
+   }
+
+   h3 {
+      font-size: 1.5em;
    }
 
    .col {
@@ -3225,7 +3236,7 @@
 
    .img-responsive {
        width: 100%;
-       height: auto
+       height: auto;
    }
 
    .h-margin {
@@ -3238,6 +3249,14 @@
        }
        h1 {
            font-size: 2em
+       }
+
+       h2 {
+        font-size: 1.5em;
+       }
+
+       h3 {
+        font-size: 1em;
        }
        .send_btn {
            padding: 10px
@@ -3871,8 +3890,8 @@
    }
 
    .footer__contacts {
-       background: url(img/footerbg.png) 50% 82% no-repeat;
-       background-size: cover
+       background: url(img/footerbg.png) bottom no-repeat;
+       background-size: 200%;
    }
 
    .footer__wrap {
