добавил страницу цен

--- a/style.css
+++ b/style.css
@@ -3238,7 +3238,10 @@
        width: 100%;
        height: auto;
    }
-
+  img {
+    max-width: 100%;
+    height: auto;
+  }
    .h-margin {
        margin: 15px auto
    }
